Fix PT and ES scrollbar

--- a/content/loc_style_guides/Localization Style Guide - ES/LSG_ES_style.css
+++ b/content/loc_style_guides/Localization Style Guide - ES/LSG_ES_style.css
@@ -1,3 +1,28 @@
+/* Scrolling  */
+
+::-webkit-scrollbar {
+    width: .3em;
+}
+  
+::-webkit-scrollbar-track {
+    background:  #F8F7FC;
+    border-radius: 100vw;
+    margin-block: 0.5em;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: #F71963;
+    border: 0.25em solid #F71963;
+    border-radius: 100vw;
+}
+
+/* Firefox scrolling */
+@supports (scrollbar-color: #F71963 #F8F7FC) {
+    * {
+        scrollbar-color: #F71963 #F8F7FC;
+    }
+}
+
 @font-face {
     font-family: "VTEXTrust Regular";
     src: url(./fonts/VTEXTrust-Regular.otf);
@@ -35,8 +60,14 @@ body {
 }
 
 .doc-content {
-    padding: 0 1rem;
+    padding: 0 1rem 3rem;
     grid-area: 1 / 1 / span 5 / span 1;
+    margin: 60px 17% 0 0;
+    overflow-y: scroll;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: calc(100% - 60px);
 }
 
 .update-info {
@@ -98,18 +129,18 @@ table {
     font-size: 0.85rem;
 }
 
-aside {
-    position: sticky;
-    right: 0;
-    top: 0;
-}
-
 .aside-content {
     grid-area: 1 / 2 / span 1 / span 1;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem 3rem;
     font-size: 0.8rem;
     color: var(--bg-5);
     line-height: 1.7;
+    position: fixed;
+    height: calc(100% - 60px);
+    left: 83%;
+    right: 0;
+    overflow-y: scroll;
+    top: 60px;
 }
 
 .content {
